# funee

./: COMPLETION_SUMMARY.md  Cargo.toml  DESIGN-MACROS.md  HEARTBEAT.md  HTTP_IMPORTS_DESIGN.md  MACRO_IMPLEMENTATION_PROGRESS.md  PLAYBOOK.md  PORTING_PLAN.md  README.md  SELF_HOSTED_TESTS_REPORT.md  STEP2_COMPLETE.md  STEP2_IMPLEMENTATION.md  STEP3_MACRO_EXECUTION.md  STEP3_STATUS.md  STEP3_TEST_RESULTS.md  TASKS.md  TDD_STATUS.md  TODO.md  another.ts  check_default.rs  example.ts  package-lock.json
.github/workflows/: test.yml
.wip/: capture_closure.rs  macro_runtime2.rs  macro_runtime3.rs
docs/: OPAH-ANALYSIS.md
examples/: demo.ts  github-stats.ts  macro_example.md  validator-demo.ts
examples/watch-demo/: debug.ts  math.test.ts  math.ts
funee-lib/: FUNEE_LIB_DESIGN.md  README.md  ast-builders.ts  ast-types.ts  ast-utils.ts  core.ts  host.ts  index.ts  package.json  validator-watch-demo.ts  validator-watch-test.ts  withCache.ts
funee-lib/abstracts/: index.ts  someDirectory.ts  someString.ts
funee-lib/assertions/: Assertion.ts  AssertionError.ts  assertThat.ts  both.ts  contains.ts  greaterThan.ts  greaterThanOrEqual.ts  index.ts  is.ts  lessThan.ts  lessThanOrEqual.ts  matches.ts  not.ts
funee-lib/axax/: collectLength.ts  concurrentFilter.ts  concurrentMap.ts  count.ts  deferred.ts  filter.ts  fromArray.ts  fromEmitter.ts  fromNodeStream.ts  index.ts  map.ts  merge.ts  reduce.ts  streamUntilLength.ts  subject.ts  toArray.ts  toCallbacks.ts
funee-lib/collections/: index.ts  without.ts
funee-lib/filesystem/: FsResult.ts  PathString.ts  index.ts  isFile.ts  lstat.ts  readFile.ts  readFileBinary.ts  readdir.ts  tempDir.ts  writeFile.ts  writeFileBinary.ts
funee-lib/functions/: curry.ts  index.ts  not.ts
funee-lib/git/: getNameOfRef.ts  index.ts
src/: emit_module.rs  execute_expression_in_scope.rs  execution_request.rs  execution_request.rs.bak  funee_identifier.rs  host.rs  http_loader.rs  lib.rs  load_module.rs  main.rs  module_loader.rs  run_js.rs  runtime.js
tests/: .gitignore  cli.test.ts  host_functions.rs  package-lock.json  package.json  vitest.config.ts
(+247 files in other folders)
