[package]
name = "funee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
deno_core = "0.147.0"
petgraph = "0.6.2"
sourcemap = "6.0.1"
swc_common = { version = "0.27.12", features = ["sourcemap"] }
swc_ecma_ast = "0.90.10"
swc_ecma_codegen = "0.121.5"
swc_ecma_parser = "0.117.6"
swc_ecma_transforms_base = "0.103.10"
swc_ecma_transforms_typescript = "0.145.4"
swc_ecma_utils = "0.99.4"
swc_ecma_visit = "0.76.6"
tokio = { version = "1.20.1", features = ["full"] }
