[package]
name = "funee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
deno_core = "0.386"
petgraph = "0.6"
sourcemap = "9"
swc_common = { version = "18", features = ["sourcemap"] }
swc_ecma_ast = "20"
swc_ecma_codegen = "23"
swc_ecma_parser = "34"
swc_ecma_transforms_base = "37"
swc_ecma_transforms_typescript = "41"
swc_ecma_utils = "26"
swc_ecma_visit = "20"
swc_atoms = "9"
relative-path = "1.9"
tokio = { version = "1", features = ["full"] }
